# pytest_spec

./: README.md  pyproject.toml
src/pytest_spec/: basic.py
tests/basic/: test_basic.py  test_pydantic.py
tests/mocks/: test_instance_mock.py  test_loop_def.py  test_snapshot.py
